修复p0待办事项